Fix text overflow in moible

--- a/src/main/content/antora_ui/src/css/doc.css
+++ b/src/main/content/antora_ui/src/css/doc.css
@@ -96,12 +96,6 @@
   font-size: inherit;
 }
 
-.doc p,
-.doc :not(td) > .content,
-.doc .tableblock thead {
-  hyphens: auto;
-}
-
 .doc a {
   color: var(--link-font-color);
 }
